<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/profile_bg1"
    tools:context=".Fragments.ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="141dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_width="0dp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfileImage"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/dim_10"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="@string/phone"

            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvOr"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/app_theme"
        android:elevation="5dp"
        android:text="@string/edit"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="OR"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/btnLogout"
        android:layout_marginBottom="@dimen/dim_61"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/app_theme"
        android:elevation="5dp"
        app:cornerRadius="10dp" />

</RelativeLayout>