<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/app_theme"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvWelcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back"
        android:textColor="@color/app_theme_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeback">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            tools:ignore="ExtraText">


            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:hint="@string/enter_password"
                app:boxBackgroundMode="none"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayoutEdittextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"

                    app:boxStrokeWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.459" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="160dp"
                android:layout_height="30dp"

                android:layout_marginTop="12dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.964"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="16dp"

                android:layout_marginTop="60dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="28dp"
                android:text="@string/dont_have_an_account"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/tvLoginSignup"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="96dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/app_theme"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>