<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="86dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signup"
        android:textColor="@color/app_theme_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center">

            <EditText
                android:id="@+id/etSignupUsername"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:hint="@string/username"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSignupEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="10dp"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSignupUsername" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupTextInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:background="@color/app_theme"
                android:backgroundTint="@color/edit_text_background"
                android:hint="@string/password"
                app:boxBackgroundMode="none"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSignupEmail"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupTextInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"
                    app:boxStrokeWidth="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupTextInputLayoutPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10"

                android:hint="@string/confirm_password"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:helperText=""
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupTextInputLayoutPassword"

                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme"
                tools:layout_editor_absoluteX="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupTextInputEditTextPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="281dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="26dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupTextInputLayoutPasswordConfirm" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_marginStart="94dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:text="Already have a account?"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignup"
                app:layout_constraintVertical_bias="0.094" />

            <TextView
                android:id="@+id/tvSignupLogin"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="104dp"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/app_theme"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.857" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>













</androidx.constraintlayout.widget.ConstraintLayout>